@@ -42,8 +42,8 @@ if sys.version[0:3] < '2.3':
     raise ImportError, 'Python Version 2.3 or above is required.'
         
 # Define what gets imported with a 'from IPython import *'
-__all__ = ['deep_reload','genutils','ultraTB','DPyGetOpt','Itpl','hooks',
-           'ConfigLoader','OutputTrap','Release','Struct','Shell']
+__all__ = ['deep_reload','genutils','ipstruct','ultraTB','DPyGetOpt',
+           'Itpl','hooks','ConfigLoader','OutputTrap','Release','Shell']
 
 # Load __all__ in IPython namespace so that a simple 'import IPython' gives
 # access to them via IPython.<name>
